# AniSVG

./: AniSVG.kdev4  CMakeLists.txt  CMakeLists.txt~  Messages.sh  README  anisvg.cpp  anisvg.cpp~  anisvg.h  anisvg.h~  plasma-wallpaper-anisvg.desktop  svgview.cpp  svgview.cpp~  svgview.h
.kdev4/: AniSVG.kdev4
